@@ -44,7 +44,7 @@ class ExecutorConfiguration {
 
 		int processors = Runtime.getRuntime().availableProcessors();
 		int threadCount = Math.max(4, processors - 4);
-		log.info(String.format("Setting up Executor Service with %d Threads, %d processors", threadCount, processors));
+		log.info("Setting up Executor Service with %d Threads, %d processors".formatted(threadCount, processors));
 
 		ThreadPoolExecutorFactoryBean scheduler = new ThreadPoolExecutorFactoryBean();
 		scheduler.setCorePoolSize(threadCount);
